# user_accounts

./: .gitignore  README.md
app/: pyproject.toml  requirements.txt
app/accounts/: admin.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
app/accounts/migrations/: 0001_initial.py
app/accounts/models/: __init__.py  managers.py
app/accounts/tests/: __init__.py  test_models.py  test_serializers.py  test_urls.py  test_views.py
app/config/: settings.py  urls.py
backend/: pyproject.toml  requirements.txt
backend/accounts/: admin.py  apps.py  validators.py
backend/accounts/api/v1/: urls.py
backend/accounts/api/v1/serializers/: __init__.py  login.py  user_profile.py  user_profile_update.py
backend/accounts/api/v1/views/: __init__.py  login.py  user_profile.py  user_profile_update.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/models/: users.py
backend/accounts/tests/: test_models.py  test_serializers.py  test_urls.py  test_views.py
backend/common/: __init__.py  constants.py  permissions.py
backend/config/: settings.py  urls.py
